test/ui/test/packages/circular-components-in-same-package/package.stderr
error: the library component ‘loops’ is circular
   ┌─ ${TEST_FOLDER}/packages/circular-components-in-same-package/package.metadata:10:25
   │
10 │         dependencies: { loops: {} },
   │                         ═════

error: the library components ‘cycle1component1’, ‘cycle1component2’ and ‘cycle1component0’ are circular
   ┌─ ${TEST_FOLDER}/packages/circular-components-in-same-package/package.metadata:17:25
   │
17 │         dependencies: { cycle1component1: {} },
   │                         ════════════════
   │
   ├─ ${TEST_FOLDER}/packages/circular-components-in-same-package/package.metadata:22:25
   │
22 │         dependencies: { cycle1component2: {} },
   │                         ════════════════
   │
   ├─ ${TEST_FOLDER}/packages/circular-components-in-same-package/package.metadata:27:25
   │
27 │         dependencies: { cycle1component0: {} },
   │                         ════════════════

error: the library components ‘cycle2component1’ and ‘cycle2component0’ are circular
   ┌─ ${TEST_FOLDER}/packages/circular-components-in-same-package/package.metadata:35:13
   │
35 │             cycle2component1: {},
   │             ════════════════
   │
   ├─ ${TEST_FOLDER}/packages/circular-components-in-same-package/package.metadata:43:25
   │
43 │         dependencies: { cycle2component0: {}, unrelated: {} },
   │                         ════════════════

error: the library components ‘snake0’ and ‘snake1’ are circular
   ┌─ ${TEST_FOLDER}/packages/circular-components-in-same-package/package.metadata:53:58
   │
53 │     snake0: { type: library, path: "s0", dependencies: { snake1: {} } },
   │                                                          ══════
   │
   ├─ ${TEST_FOLDER}/packages/circular-components-in-same-package/package.metadata:54:58
   │
54 │     snake1: { type: library, path: "s1", dependencies: { snake0: {} } },
   │                                                          ══════

error: aborting due to 4 previous errors

